infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    #  will search all the config files with this annotation looking for routing rules
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
      # this is the domain where the app will be running
    - host: localhost
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                # we redirect all the requests to that path to the corresponding service
                name: posts-cluster-serv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                # we redirect all the requests to that path to the corresponding service
                name: query-cluster-serv
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                # we redirect all the requests to that path to the corresponding service
                name: comments-cluster-serv
                port:
                  number: 4001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                # we redirect all the requests to that path to the corresponding service
                name: client-cluster-serv
                port:
                  number: 3000
